--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,204 +1,220 @@
-
+/* common code start  */
 *
 {
 	box-sizing: border-box;
-	font-family: 'Poppins', sans-serif;
-	margin: 0;
-	padding: 0;
 }
 a
 {
-	display: inline-block;
 	text-decoration: none;
-	font-size: 1.2rem;
 }
 li
 {
 	list-style: none;
 }
-.container
-{
-	width: 83%;
-	height: 100%;
-	margin: 0 auto;
-}
 img
 {
-	display: block;
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 	object-fit: cover;
 }
-body
+.d-flex
 {
-	background: #172737;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 /* nav code start */
-nav .navbar
+.navbar-brand
 {
-	display: flex;
 	position: relative;
-	justify-content: space-between;
-	align-items: center;
-	padding: 20px 0;
-	height: 60px;
-}
-nav .navbar .toggle-btn
-{
-	position: absolute;
-	top: 22px;
-	right: 0;
-}
-nav .navbar .toggle-btn span
-{
-	display: none;
-	width: 20px;
-	height: 3px;
-	background-color: #e6e6e6;
-	transition: .5s all;
-	border-radius: 4px;
-	margin-bottom: 11px;
-}
-nav .navbar .toggle-btn span:first-child
-{
-	box-shadow: 0 7px #e6e6e6;
-}
-nav .navbar .brand-logo
-{
-	flex: 1;
-}
-nav .navbar .brand-logo a
-{
-	color: #eeeeee;
-	transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 1s;
-}
-nav .navbar .brand-logo a:hover
-{
-	color: aliceblue;
-}
-/* nav-links code */
-nav .navbar .nav-links
-{
-	flex: 1;
-}
-nav .navbar .nav-links ul
-{
-	display: flex;
-	align-items: center;
-	justify-content: end;
-	gap: 20px;
-}
-nav .navbar .nav-links ul li a
-{
- padding: 6px 10px;
- color: #e6e6e6;
- transition: .5s all;
-}
-nav .navbar .nav-links ul li a:hover
-{
-	color: #9c2222;
-}
-nav .active 
-{
-	height: 290px;
-}
-/* nav code end */
-@media (max-width: 991px) {
-	nav .navbar
-	{
-		flex-direction: column;
-		align-items: start;
-		overflow: hidden;
-		transition: .5s all;
-	}
-	nav .navbar .nav-links
-	{
-		width: 100%;
-		margin-top: 5px;
-	}
-	
-	nav .navbar .nav-links ul
-	{
-		flex-direction: column;
-		align-items: center;
-		text-align: center;
-	}
-	nav .navbar .nav-links ul li a
-	{
-		padding: 0;
-	}
-	nav .navbar .toggle-btn span
-	{
-		display: block;
-		position: relative;
-	}
-	nav .active .toggle-btn span
-	{
-		transform: rotate(45deg);
-	}
-	nav .active .toggle-btn span:first-child
-	{
-		box-shadow: none;
-		bottom: -7px;
-		background-color: #9c2222;
-	}
-	nav .active .toggle-btn span:last-child
-	{
-		background-color: #9c2222;
-		transform: rotate(-45deg);
-		top: -7px;
-	}
-	nav .navbar .brand-logo a
-	{
-		color: #e6e6e6;
-	}
-	nav .navbar.active .brand-logo a 
-	{
-		color: #9c2222;
-	}
-}
-
-/* header section code start */
-header .header-inner
-{
-	margin-top: 7rem;
-}
-header .header-inner h1,h2
-{
-	color: #eeeeee;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 1.5rem;
-	font-weight: 400;
-}
-header .header-inner h1
-{
+	display: inline-block;
+	color: #fff;
 	font-size: 2.5rem;
 	font-weight: 700;
+	padding: 6px 0px 6px 10px;
+	margin: 0;
 	line-height: 1;
-	margin-top: 1rem;
+	border: 4px solid #8A5643;
+	letter-spacing: .1em;
 }
-header .header-inner .title
+.navbar-brand::before
+{
+	content: '';
+	position: absolute;
+	width: 100px;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: #8A5643;
+	z-index: -1;
+}
+.navbar-brand span
+{
+	font-weight: 400;
+	color: #8A5643;
+	margin: 0;
+	padding: 0 6px;
+}
+.navbar-brand::after
+{
+	position: absolute;
+	content: 'READY-TO-ASSEMBLE CABINETRY';
+	display: block;
+	bottom: 0;
+	left: -5px;
+	font-size: 14px;
+	letter-spacing: .28em;
+	font-weight: 400;
+	color: #8A5643;
+	transform: translateY(25px);
+}
+.navbar-expand-lg .navbar-collapse {
+    display: flex!important;
+    flex-basis: auto;
+    flex-direction: column-reverse;
+	align-items: end;
+}
+.navbar .navbar-collapse .top-links li:nth-child(2)
+{
+	border-right: 1px solid #808080;
+	border-left: 1px solid #808080;
+}
+.navbar .navbar-collapse .top-links li a
+{
+	display: inline-block;
+	color: #808080;
+	margin: 0 10px;
+	transition: .5s all;
+	font-weight: 500;
+	font-size: 14px;
+}
+.navbar .navbar-collapse .top-links li a:hover
+{
+	color: #8A5643;
+}
+.navbar .navbar-collapse .top-links li a i
+{
+	color: #000;
+	margin-right: 6px;
+}
+.navbar-expand-lg .navbar-nav .nav-link
+{
+	font-size: 18px;
+	font-weight: 700;
+}
+/* =====header section code start===== */
+header
+{
+	width: 100%;
+	background: linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.7)), url(../img/header.jpg), no-repeat;
+	background-size: cover;
+	margin-top: 10px;
+}
+header .order .order-click
 {
 	position: relative;
-	overflow: hidden;
-}
-header .header-inner p
-{
-	margin-top: 2rem;
-	color: #eeeeee;
+	width: 200px;
+	height: 200px;
 	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: transparent;
+	border-radius: 50%;
+	border: 4px solid #BC6D3E;
+	z-index: 1;
+	margin-top: 250px;
+	margin-left: 40%;
+	margin-bottom: 50px;
+}
+header .order .order-click::after
+{
+	position: absolute;
+	content: '';
+	width: 150px;
+	height: 150px;
+	background: #BC6D3E;
+	border-radius: 50%;
+	z-index: -1;
+}
+header .order .order-click a
+{
+	display: inline-block;
+	color: #fff;
+	font-size: 20px;
+	font-weight: 500;
+	line-height: 1;
+	letter-spacing: 5px;
+	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	font-size: 1.2rem;
-	font-weight: 400;
-	text-align: center;
-	padding-left: 4rem;
-	padding-right: 4rem;
 }
-/* header section code end */
-/* header responsive code start */
-@media (max-width: 991px) {
+.millwork .card-content h2
+{
+	position: relative;
+	font-weight: 600;
 }
-/* header responsive code end */
+.millwork .card-content h2::after
+{
+	position: absolute;
+	content: '';
+	left: 0;
+	bottom: -25px;
+	width: 80px;
+	height: 1px;
+	background: #BC6D3E;
+}
+.millwork .card-content p
+{
+	font-size: 23px;
+}
+.millwork .card-content a
+{
+	display: inline-block;
+	padding: 10px 20px;
+	background: #BC6D3E;
+	color: #fff;
+	font-weight: 500;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+}
+.millwork .title h2
+{
+	font-weight: 600;
+}
+.card-content ul li
+{
+	list-style: outside;
+	font-size: 23px;
+}
+/* =====advantage section code start ===== */
+.advantage
+{
+	background: linear-gradient(rgba(0,0,0,.1),rgba(0,0,0.1)) ,url(../img/interior.jpg), no-repeat;
+	background-size: cover;
+	width: 100%;
+	height: 100vh;
+}
+.advantage .title
+{
+	position: relative;
+	width: 100%;
+}
+.advantage .title h2
+{
+	position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 10rem;
+    font-weight: 400;
+    background: #fff;
+    color: #000;
+    width: 100%;
+    transform: translateY(-50px);
+    mix-blend-mode: screen;
+    line-height: 0;
+    height: 130px;
+    display: flex;
+    align-items: center;
+	justify-content: start;
+}
